# comma-vc-dev

./: .gitignore  pyproject.toml
dataset/: __init__.py  dali_dataset.py
experiments/: default.yaml
model/: __init__.py  _vqvae.py
model/swin/: __init__.py  swin_video.py  train_swin.py
scripts/: check_mkv_integrity.py  download_comma2k19.py  download_raw.sh  fps_fix.sh  generate_frame_counts.py  generate_iframe_h5.py  route_id_check.sh  train.py  train_swin.py  train_utils.py  transcode_for_training.py  validate_dali_data.py  vis_loss.py
train/: __init__.py  _eval.py  _plot.py  _swin.py  _trainer.py  _utils.py
