[project]
name = "comma-vc-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub[cli]>=1.18.0",
    "numpy>=2.4.6",
    "h5py>=3.16.0",
    "matplotlib>=3.10.9",
    "pyyaml>=6.0",
    "torch>=2.12.0",
    "tqdm>=4.68.1",
    "nvidia-dali-cuda120>=2.1.0",
]
